--- a/gradle.properties
+++ b/gradle.properties
@@ -22,4 +22,7 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-android.experimental.lint.version=8.8.2
+android.experimental.lint.version = 9.0.0-beta03
+org.gradle.daemon = true
+org.gradle.console=verbose
+org.gradle.caching=true
